--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
         </div>
       </section>
     </div>
+    <h1>Hello world</h1>
     <script src="./script.js"></script>
   </body>
 </html>
